--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,12 +1,9 @@
 body{
-    width: 90vw !important;
-    margin: auto !important;
-    background-image: url('../background2.jpg');
-    background-position: center;
-    background-repeat: repeat;
-    background-size: contain;
     font-family: 'Voces', cursive !important;
      background-blend-mode: exclusion;
+}
+.mbr-navbar:before, .mbr-navbar__container{
+    height:0px !important;   
 }
 
 .mbr-hero__text{
